--- a/public/index.html
+++ b/public/index.html
@@ -46,31 +46,8 @@
                         </div>
                 </div>
             </form>
-            <ul class="collapsible" id="appsList">
-                <li>
-                    <div class="collapsible-header">
-                        <a href=""  class="tooltipped" data-tooltip="Stop pinging this app"><i class="material-icons" style="color:#2bbbad;">play_arrow</i></a>
-                        <a href=""><span style="color:#2bbbad;">my-first-app.herokuapp.com</span></a>
-                        <span class="badge">added 2 hours ago</span>
-                        <a href="" class="tooltipped" data-tooltip="Delete"><i class="material-icons" style="color:#ee6e73;">delete</i></a>
-                    </div>
-                </li>
-                <li>
-                    <div class="collapsible-header">
-                        <a href="" class="tooltipped" data-tooltip="Try again"><i class="material-icons" style="color:#ee6e73;">error</i></a>
-                        <a href=""><span style="color:#ee6e73;">my-second-app.herokuapp.com — inactive</span></a>
-                        <span class="badge">added 16 hours ago</span>
-                        <a href="" class="tooltipped" data-tooltip="Delete"><i class="material-icons" style="color:#ee6e73;">delete</i></a>
-                    </div>
-                </li>
-                <li>
-                    <div class="collapsible-header">
-                        <a href="" class="tooltipped" data-tooltip="Keep alive this app"><i class="material-icons">stop</i></a>
-                        <a href=""><span style="color: black;">my-third-app.herokuapp.com</span></a>
-                        <span class="badge">added 48 hours ago</span>
-                        <a href="" class="tooltipped" data-tooltip="Delete"><i class="material-icons" style="color:#ee6e73;">delete</i></a>
-                    </div>
-                </li>
+            <ul class="collection" id="appsList">
+            
               </ul>
             <div class="collapsible">
                 <div class="collapsible-header">This app is for education purposes, so it has some restrictions:</div>
@@ -98,6 +75,6 @@
         <!--end footer-->
     </div>
         
-    <script src="../js/index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
