--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <!--navbar start-->
         <nav class="teal lighten-2">
             <div class="nav-wrapper">
-                <a href="/" class="brand-logo center">Ping My Heroku App</a>
+                <a href="/" class="brand-logo center">Ping My App</a>
                 <ul id="nav-mobile" class="left hide-on-med-and-down">
                     <li><a href="/about">about</a></li>
                     <li><a href="https://github.com/mekhron/ping-my-heroku-app">source code</a></li>
