--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         <nav class="teal lighten-2">
             <div class="nav-wrapper">
                 <a href="/" class="brand-logo center">Ping My App</a>
-                <ul id="nav-mobile" class="left hide-on-med-and-down">
+                <ul id="nav-mobile" class="left">
                     <li><a href="/about">about</a></li>
                     <li><a href="https://github.com/mekhron/ping-my-heroku-app">source code</a></li>
                 </ul>
